tests/ui/diagnostic_namespace/on_move/error_is_shown_in_downstream_crates.rs
//@ aux-build:other.rs

extern crate other;

use other::Foo;

fn takes_foo(_: Foo) {}

fn main() {
    let foo = Foo;
    takes_foo(foo);
    let bar = foo;
    //~^ERROR Foo
}
